	- by default if details not found during word lookup in compact mode, automatically result is displayed in classic mode
	- this can be changed using "Preferences", de-select the checkbox next to compact mode
	- in above case pop-up displays error along with following options, which user has to select manually:
		- Display Result in Classic Mode
		- Change Settings to use Classic Mode
- 
------------------------------------------------------------------------------------------------

---------------------------------
Handy Dictionary v0.5 16-Mar-2013
---------------------------------
- fix for cambridge dictionary compact mode
	- Compact mode was not displaying details from cambridge dictionary after website interface changed
- CSS updated for classic mode
	- several dictionary websites changed styles/interface, so latest css to be used for classic dictionary updated
------------------------------------------------------------------------------------------------

-----------------------
Handy Dictionary v0.4
-----------------------
- Restart-less
	- From next time there will be no restart required to receive updates
- Enable tool for form elements
	- double click on words to lookup inside input-box/text-area OR
	- right click on input-box/text-area and perform lookup
- Fix, positioning of pop-up when click near right/bottom edge.
	- Pop-up will be always displayed in visible window, no mater where you click 
- Compact Mode
	- For advance user quick lookup (only simple definition/description) in compact mode.
- Native look for existing interface
	- Existing interface is changed to display definition in native look/style
- Keyboard shortcuts
	- Advance user can access menus/preferences using shortcuts 

------------------------------------------------------------------------------------------------

Handy Dictionary v0.3 (6-Dec-2012)
- support for link/anchor
	Right click on any link and lookup words from context menu.