@@ -19,6 +19,10 @@ ui_cm_opt1=Display Result in Classic Mode
 ui_cm_opt2=Change Settings to use Classic Mode
 ui_cm_opt2_desc=If this issue occurs for all words then kindly change settings to use Classic Mode till fix is provided
 
+#ui classic mode error
+ui_cl_error_title=was not found,
+ui_cl_error_alt=try following suggestions
+
 # ajax
 ajax_loading=Loading...
 
