@@ -11,7 +11,8 @@ Handy Dictionary v0.6
 	- in above case pop-up displays error along with following options, which user has to select manually:
 		- Display Result in Classic Mode
 		- Change Settings to use Classic Mode
-- 
+- suggestions incase word not found
+	- if word is not found then suggestions are displayed if present in the response
 ------------------------------------------------------------------------------------------------
 
 ---------------------------------
